fix for text align in select

--- a/style/style.css
+++ b/style/style.css
@@ -87,7 +87,7 @@ select  {
   color: #FFFFFF;
   background-color: #00001d;
   border-radius: 25px;
-  text-align: center;
+  text-align-last: center;
 }
 
 #typeSelection > .labelBox  {
